# adpt

./: CLAUDE.md  Cargo.toml  CommandLineHelp.md  README.md  codebook.toml  renovate.json  schema.gql
.github/workflows/: ci.yml  release.yml
resources/: simulate_progress_recipe.py
src/: client.rs  config.rs  json_schema.rs  main.rs  pyproject.rs  rest_types.rs  serde_utils.rs  terminal.rs  ui.rs
src/graphql/: all_models.graphql  cancel.graphql  create_dataset_from_multipart.graphql  job.graphql  jobs.graphql  list.graphql  models.graphql  pools.graphql  publish.graphql  recipe.graphql  run.graphql  upload_dataset.graphql  usecases.graphql
