[package]
name = "adpt"
version = "0.4.0"
edition = "2024"
description = "A tool for interacting with the Adaptive platform"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
autumnus = { version = "0.7.6", default-features = false, features = ["lang-json"] }
clap = { version = "4.5.47", features = ["derive", "string"] }
clap_complete = { version = "4.5.58", features = ["unstable-dynamic"] }
directories = "6.0.0"
dotenvy = "0.15.7"
envy = "0.4.2"
fancy-duration = "0.9.2"
graphql_client = "0.15.0"
iocraft = "0.7.14"
keyring = { version = "3.6.3", features = ["apple-native", "crypto-rust", "sync-secret-service"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
slug = "0.1.6"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
zip-extensions = { version = "0.8.3", default-features = false, features = ["deflate"] }
